<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent">
<LinearLayout
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="wrap_content">
  <TextView
    	android:id="@+id/textView2"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:text="@string/helm_line">
    </TextView>
    <EditText 
    	android:layout_height="wrap_content" 
    	android:layout_width="match_parent" 
    	android:id="@+id/helm" 
    	android:inputType="textCapWords">
    </EditText>
    <TextView
    	android:id="@+id/textView3"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:text="@string/crew_line"/>
    <EditText
    	android:layout_height="wrap_content"
    	android:layout_width="match_parent"
    	android:id="@+id/crew"
    	android:inputType="textCapWords">
    </EditText>
    <TextView
    	android:id="@+id/textView4"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:text="@string/class_line">
    </TextView>
    <EditText
    	android:layout_height="wrap_content"
    	android:layout_width="match_parent"
    	android:id="@+id/boat_class"
    	android:inputType="textCapWords">
    </EditText>
    <TextView
    	android:id="@+id/textView4a"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:text="@string/py_line">
    </TextView>
    <EditText
    	android:layout_height="wrap_content"
    	android:layout_width="match_parent"
    	android:id="@+id/py"
    	android:inputType="number">
    </EditText>
    <TextView
    	android:id="@+id/textView5"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:text="@string/sailno_line">
    </TextView>
    <EditText
    	android:layout_height="wrap_content"
    	android:layout_width="match_parent"
    	android:id="@+id/sail_number"
    	android:inputType="number">
    </EditText>
    <TextView
    	android:id="@+id/textView6"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:text="@string/club_line">
    </TextView>
    <EditText
    	android:layout_height="wrap_content"
    	android:layout_width="match_parent"
    	android:id="@+id/club"
    	android:inputType="textCapWords">
    </EditText>
    <Button
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content" 
    	android:text="@string/confirm_and_quit_button_text" 
    	android:id="@+id/save_button">
    </Button>
    <Button
    	android:layout_height="wrap_content"
    	android:layout_width="wrap_content"
    	android:id="@+id/next_button"
    	android:text="@string/confirm_and_next_button_text"
    	android:nextFocusDown="@+id/textView2">
    </Button>
</LinearLayout>
</ScrollView>
