<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent">
<LinearLayout
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="wrap_content">
  <TextView
    	android:id="@+id/textView2"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content" android:text="@string/series_name_line">
    </TextView>
    <EditText 
    	android:layout_height="wrap_content" 
    	android:layout_width="match_parent" 
    	android:inputType="text" android:id="@+id/series_name">
    </EditText>
    <TextView 
        android:id="@+id/textView6" 
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:text="@string/num_races_line">
    </TextView>
    <EditText 
        android:layout_height="wrap_content" 
        android:layout_width="match_parent" 
        android:inputType="number" 
        android:id="@+id/num_races">
    </EditText>
    <TextView 
        android:id="@+id/textView7" 
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:text="@string/discard_profile_line">
    </TextView>
    <EditText 
        android:layout_height="wrap_content" 
        android:layout_width="match_parent" 
        android:inputType="phone"
        android:id="@+id/discard_profile">
    </EditText>
    <RadioGroup 
        android:id="@+id/radioSeriesType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/radioFleet"
        	android:layout_width="wrap_content" 
        	android:layout_height="wrap_content" 
        	android:text="@string/fleet"
        	android:checked="true" />
        <RadioButton
            android:id="@+id/radioHcap"
        	android:layout_width="wrap_content" 
        	android:layout_height="wrap_content" 
        	android:text="@string/hcap" />
    </RadioGroup>    
    <Button 
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:id="@+id/select_entries_button" 
        android:text="@string/select_competitors_button_text">
    </Button>
    <Button 
        android:layout_width="wrap_content" 
        android:id="@+id/save_button" 
        android:layout_height="wrap_content" 
        android:text="@string/confirm_button_text">
    </Button>
</LinearLayout>
</ScrollView>
